--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "truffle compile",
+    "test": "truffle test"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,9 @@
   "homepage": "https://github.com/idexo-io/smartcontractset#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^4.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "truffle-assertions": "^0.9.2"
   }
 }
