--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,12 +20,30 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Setup node
+      uses: actions/setup-node@v1
+      with:
+        node-version: '14.x'
+
     - name: Versions
-      run: npm version; aws --version
+      run: npm version
+
+    - name: cache node modules
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        # npm cache files are stored in `~/.npm` on Linux/macOS
+        path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
 
     - name: npm build
       run: |
-        npm install -g truffle --quiet --no-progress
+        npm install --quiet --no-progress --g truffle
         npm install --quiet --no-progress
         truffle compile
         ls -lah
