--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Versions
       run: npm version
 
-    - name: cache node modules
+    - name: Cache node modules
       uses: actions/cache@v2
       env:
         cache-name: cache-node-modules
@@ -41,9 +41,9 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
 
-    - name: npm build
+    - name: Truffle compile and test
       run: |
         npm install --quiet --no-progress --g truffle
         npm install --quiet --no-progress
         truffle compile
-        ls -lah
+        truffle test
