comment truffle test

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,4 +46,4 @@ jobs:
         npm install --quiet --no-progress --g truffle
         npm install --quiet --no-progress
         truffle compile
-        truffle test
+        #truffle test
