--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "@openzeppelin/contracts": "^4.0.0"
   },
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.11",
     "chai": "^4.3.4",
+    "eth-sig-util": "^3.0.1",
+    "ethereumjs-util": "^7.0.10",
+    "ethereumjs-wallet": "^1.0.1",
+    "ethers": "^5.1.4",
     "truffle-assertions": "^0.9.2"
   }
 }
